# VisuDemo

./: .gitignore  CMakeLists.txt  README.md  exit
include/glad/: gl.h
include/imgui/: _IMP_IMGUI.hpp
shaders/: attractor.comp  attractor_shading.comp  blit.frag  blit.vert  raymarching.comp  render.comp  render_attractor.comp  ssao_attractor.comp
src/: app.cpp  app.h  attractor.h  attractor_renderer.cpp  attractor_renderer.h  imgui_util.hpp  leap_connection.cpp  leap_connection.h  main.cpp  mathracttor.h  mathracttor.hpp  old_attractor.hpp  opengl_util.h  raymarcher.h  raymarching_renderer.cpp  raymarching_renderer.h
